# pixels

./: .flake8  README.md  pyproject.toml
pixels/: __main__.py  client.py  exceptions.py  logger.py  pixel.py
tests/: test_pixels.py
